--- a/Tracker/Tracker/Tracker.csproj
+++ b/Tracker/Tracker/Tracker.csproj
@@ -20,6 +20,8 @@
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Shiny.Locations" Version="1.2.0.1755" />
+    <PackageReference Include="Shiny.Core" Version="1.2.0.1755" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
