--- a/Tracker/Tracker.Web/Tracker.Web.csproj
+++ b/Tracker/Tracker.Web/Tracker.Web.csproj
@@ -8,11 +8,15 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Taxys.Rest" Version="1.0.41" />
-    <PackageReference Include="Taxys.Rest.Authentication" Version="1.0.35" />
     <PackageReference Include="Taxys.Rest.Authorization" Version="1.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\NuGet\Taxys.Rest.Authentication\Taxys.Rest.Authentication.csproj" />
   </ItemGroup>
 </Project>
