--- a/Tracker/Tracker.Web/Tracker.Web.csproj
+++ b/Tracker/Tracker.Web/Tracker.Web.csproj
@@ -23,10 +23,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Taxys.Rest" Version="1.0.41" />
+    <PackageReference Include="Taxys.Rest.Authentication" Version="1.0.36" />
     <PackageReference Include="Taxys.Rest.Authorization" Version="1.0.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\NuGet\Taxys.Rest.Authentication\Taxys.Rest.Authentication.csproj" />
   </ItemGroup>
 </Project>
